# flask-test

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  tests.py
app/: Dockerfile  app.py
celery/: Dockerfile  celery_tasks.py
tests/: locustfile.py
